# molstar-volseg

./: .gitattributes  .gitignore  Cellstar_tutorial.md  LICENSE  README.md  README_creating_fake_db_entries.md  app.ts  environment.yaml  environment_preprocessor.yaml  environment_production.yaml  environment_server.yaml  index.html  install_deps.sh  main.py  molstar.mjs  parametrized_dbs_input_params.txt  readme_db_build.md  requirements.txt  setup.py
api/: dumb_api_extension.py  json_numpy_response.py  v1.py  v2.py
ciftools/: LICENSE  README.md  __init__.py  pyproject.toml  setup.cfg  setup.py
ciftools/src/binary/: __init__.py  decoder.py  parser.py  writer.py
ciftools/src/binary/encoding/: data_types.py  encodings.py  types.py
ciftools/src/binary/encoding/base/: binary_cif_encoder_base.py  cif_encoder_base.py
ciftools/src/binary/encoding/impl/: binary_cif_encoder.py
ciftools/src/binary/encoding/impl/encoders/: byte_array.py  delta.py  fixed_point.py  integer_packing.py  interval_quantization.py  run_length.py  string_array.py
ciftools/src/cif_format/: __init__.py  base.py  value_presence.py
ciftools/src/cif_format/binary/: category.py  column.py  data_block.py  file.py
ciftools/src/cif_format/binary/column_types/: undefined_cif_column.py
ciftools/src/writer/: base.py  fields.py
ciftools/tests/: _decoding.py  _encoding.py  _run_all_tests.py  byte_array.py  delta.py  fixed_point.py  integer_packing.py  interval_quantization.py  lattices.bcif  run_length.py  string_array.py
db/: models.py  protocol.py  setup.py
docs/: 404.html  README.md  build.md  (+7 more)
(+964 files in other folders)
